v1.0.0/modules/schema/pages/class/MajorChargeGroup.adoc
= `MajorChargeGroup`
:toclevels: 4


+++A Major Charge Group is the same as Invoice Type which provides the highest level of grouping for charge types configuration. Examples: Market, FERC, RMR.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MajorChargeGroup`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MajorChargeGroup`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MajorChargeGroup {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Settlement {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketScheduledEvent {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ChargeType {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketInvoice {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MajorChargeGroup -> Settlement: Settlement


MajorChargeGroup -> MarketScheduledEvent: MktScheduledEvent


MajorChargeGroup -> ChargeType: ChargeType


MajorChargeGroup -> MarketInvoice: MarketInvoice


MajorChargeGroup -> DiagramObject: DiagramObjects


MajorChargeGroup -> InstanceSet: InstanceSet


MajorChargeGroup -> Name: Names


MajorChargeGroup -> ChangeSetMember: PropertiesCIMDataObject


MajorChargeGroup -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<effectiveDate,`effectiveDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<frequencyType,`frequencyType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a

| <<invoiceType,`invoiceType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a

| <<requireAutorun,`requireAutorun`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for the major charge group+++

| <<runType,`runType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a

| <<runVersion,`runVersion`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a

| <<terminationDate,`terminationDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<ChargeType,`ChargeType`>>
| 0..*
| xref::class/ChargeType.adoc[`ChargeType`]
| +++A MajorChargeGroup can have 0-n ChargeType. A ChargeType can associate to 0-n MajorChargeGroup.+++

| <<MarketInvoice,`MarketInvoice`>>
| 0..*
| xref::class/MarketInvoice.adoc[`MarketInvoice`]
| n/a

| <<MktScheduledEvent,`MktScheduledEvent`>>
| 0..*
| xref::class/MarketScheduledEvent.adoc[`MarketScheduledEvent`]
| n/a

| <<Settlement,`Settlement`>>
| 0..*
| xref::class/Settlement.adoc[`Settlement`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ChargeType]
=== `ChargeType`
+++A MajorChargeGroup can have 0-n ChargeType. A ChargeType can associate to 0-n MajorChargeGroup.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.ChargeType`
| Cardinality
| 0..*
| Type
| xref::class/ChargeType.adoc[`ChargeType`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#effectiveDate]
=== `effectiveDate`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.effectiveDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#frequencyType]
=== `frequencyType`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.frequencyType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#invoiceType]
=== `invoiceType`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.invoiceType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#MarketInvoice]
=== `MarketInvoice`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.MarketInvoice`
| Cardinality
| 0..*
| Type
| xref::class/MarketInvoice.adoc[`MarketInvoice`]


|===

//[discrete]
[#MktScheduledEvent]
=== `MktScheduledEvent`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.MktScheduledEvent`
| Cardinality
| 0..*
| Type
| xref::class/MarketScheduledEvent.adoc[`MarketScheduledEvent`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#requireAutorun]
=== `requireAutorun`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.requireAutorun`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for the major charge group+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#runType]
=== `runType`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.runType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#runVersion]
=== `runVersion`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.runVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Settlement]
=== `Settlement`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.Settlement`
| Cardinality
| 0..*
| Type
| xref::class/Settlement.adoc[`Settlement`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#terminationDate]
=== `terminationDate`


[cols="h,4",width=65%]
|===
| URI
| `cim:MajorChargeGroup.terminationDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


